--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <header>
       <nav>
         <a href="index.html" class="main-title"
-          ><img src="media/logo.png" alt="country-logo"
+          ><img src="media/logo.png" alt="Logo of Shinjuku City"
         /></a>
         <ul id="nav-buttons">
           <li><a href="index.html">Home</a></li>
@@ -82,7 +82,7 @@
         <img
           id="shinHistory"
           src="media/shinjuku-history.jpg"
-          alt="shinjuku history"
+          alt="Image of Japanese women in kimono's, older Japan era"
         />
         <div class="history">
           <h2>History</h2>
@@ -102,7 +102,7 @@
         <img
           id="shinGeo"
           src="media/shinjuku-geo.jpg"
-          alt="shinjuku geography"
+          alt="Image of Shinjuku streets at night"
         />
         <div class="geography">
           <h2>Geography</h2>
@@ -118,7 +118,7 @@
         <img
           id="shinTransport"
           src="media/shinjuku-transport.jpg"
-          alt="shinjuku transport"
+          alt="Image of a red train at a station"
         />
         <div class="transport">
           <h2>Transportation</h2>
