--- a/attractions.html
+++ b/attractions.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="The top places to see while in Shinjuku City, Tokyo, Japan!"
+      content="See the top places to visit while in Shinjuku City, Tokyo, Japan!"
     />
     <title>SHINJUKU | Attractions</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,7 +40,7 @@
     <header>
       <nav>
         <a href="index.html" class="main-title"
-          ><img src="media/logo.png" alt="country-logo"
+          ><img src="media/logo.png" alt="Logo of Shinjuku City"
         /></a>
         <ul id="nav-buttons">
           <li><a href="index.html">Home</a></li>
@@ -83,24 +83,36 @@
           ><h3>Gyoen National Garden</h3>
           <img
             src="media/gyoen.jpg"
-            alt="Gyoen National Garden"
+            alt="Image of a Japanese Garden"
             class="gyoenImg"
           />
         </a>
 
         <a href="#" class="popup-btn" data-popup="popup2"
           ><h3>Kabukicho</h3>
-          <img src="media/kabukicho.jpg" alt="Kabukicho" class="kabuImg" />
+          <img
+            src="media/kabukicho.jpg"
+            alt="Image of Kabukicho at Night"
+            class="kabuImg"
+          />
         </a>
 
         <a href="#" class="popup-btn" data-popup="popup3"
           ><h3>Robot Restaurant</h3>
-          <img src="media/robot.jpg" alt="Robot Restaurant" class="roboImg" />
+          <img
+            src="media/robot.jpg"
+            alt="Image outside of Robot Restaurant at night"
+            class="roboImg"
+          />
         </a>
 
         <a href="#" class="popup-btn" data-popup="popup4"
           ><h3>Golden Gai</h3>
-          <img src="media/goldengai.jpg" alt="Golden Gai" class="gaiImg" />
+          <img
+            src="media/goldengai.jpg"
+            alt="Image of Japanese alley at night"
+            class="gaiImg"
+          />
         </a>
       </div>
 
