--- a/food.html
+++ b/food.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="See what there is to offer in terms of food in Shinjuku">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="See what there is to offer in terms of food in Shinjuku"
+    />
     <title>SHINJUKU | Food</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/food.css">
-    <link rel="stylesheet" href="styles/normalize-fwd.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/food.css" />
+    <link rel="stylesheet" href="styles/normalize-fwd.css" />
     <script src="scripts/script.js" defer></script>
 
     <link
-    rel="icon"
-    type="image/png"
-    href="favicon/favicon-48x48.png"
-    sizes="48x48"
-  />
-  <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
-  <link rel="shortcut icon" href="favicon/favicon.ico" />
-  <link
-    rel="apple-touch-icon"
-    sizes="180x180"
-    href="favicon/apple-touch-icon.png"
-  />
-  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-  <link rel="manifest" href="favicon/site.webmanifest" />
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-48x48.png"
+      sizes="48x48"
+    />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="index.html" class="main-title"><img src="media/logo.png" alt="country-logo"></a>
+        <a href="index.html" class="main-title"
+          ><img src="media/logo.png" alt="Logo of Shinjuku City"
+        /></a>
         <ul id="nav-buttons">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -43,23 +51,23 @@
         </ul>
 
         <button
-        id="hamMenu"
-        onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
-        aria-label="Main Menu"
-      >
-        <svg class="hamburger" width="75" height="75" viewBox="0 0 100 100">
-          <path
-            class="line line1"
-            d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
-          />
-          <path class="line line2" d="M 20,50 H 80" />
-          <path
-            class="line line3"
-            d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
-          />
-        </svg>
-      </button>  
-      </nav> 
+          id="hamMenu"
+          onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
+          aria-label="Main Menu"
+        >
+          <svg class="hamburger" width="75" height="75" viewBox="0 0 100 100">
+            <path
+              class="line line1"
+              d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
+            />
+            <path class="line line2" d="M 20,50 H 80" />
+            <path
+              class="line line3"
+              d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
+            />
+          </svg>
+        </button>
+      </nav>
     </header>
 
     <main>
@@ -69,60 +77,72 @@
           Your browser does not support the video tag.
         </video>
       </div>
-    <div class="quote" >
-      <blockquote cite="https://explorepartsunknown.com/tokyo/bourdains-field-notes-tokyo/">
-      <p>I love Tokyo. If I had to eat only in one city for the rest of my life, Tokyo would be it. Most chefs I know would agree with me.</p>
-      </blockquote>
-      <cite>-- Anthony Bourdain</cite>
-    </div>
+      <div class="quote">
+        <blockquote
+          cite="https://explorepartsunknown.com/tokyo/bourdains-field-notes-tokyo/"
+        >
+          <p>
+            I love Tokyo. If I had to eat only in one city for the rest of my
+            life, Tokyo would be it. Most chefs I know would agree with me.
+          </p>
+        </blockquote>
+        <cite>-- Anthony Bourdain</cite>
+      </div>
 
-    <div class="food-content">
+      <div class="food-content">
         <div class="food-item">
           <h3>For Ramen:</h3>
           <h2>Fuunji</h2>
-          <img src="media/fuunji.jpg" alt="Fuunji">
+          <img src="media/fuunji.jpg" alt="Image of Ramen bowl" />
         </div>
 
-      <div class="food-item">
-        <h3>For Tonkatsu:</h3>
-        <h2>Katsukura</h2>
-        <img src="media/katsukura.jpg" alt="Katsukura">
-      </div>
+        <div class="food-item">
+          <h3>For Tonkatsu:</h3>
+          <h2>Katsukura</h2>
+          <img src="media/katsukura.jpg" alt="Image of cooked Tempura" />
+        </div>
 
-      <div class="food-item">
-        <h3>For Udon:</h3>
-        <h2>Mentsu-Dan</h2>
-        <img src="media/mentsudan.jpg" alt="Mentsu Dan">
-      </div>
+        <div class="food-item">
+          <h3>For Udon:</h3>
+          <h2>Mentsu-Dan</h2>
+          <img src="media/mentsudan.jpg" alt="Image of Udon bowl" />
+        </div>
 
-      <div class="food-item">
-        <h3>For Sushi:</h3>
-        <h2>Kyubey</h2>
-        <img src="media/kyubey.jpg" alt="Kyubey">
-      </div>
+        <div class="food-item">
+          <h3>For Sushi:</h3>
+          <h2>Kyubey</h2>
+          <img src="media/kyubey.jpg" alt="Image of assorted sushi" />
+        </div>
 
-      <div class="food-item">
-        <h3>For Sweets:</h3>
-        <h2>Sadaharu Aoki</h2>
-        <img src="media/sadaharu.jpg" alt="Sadaharu">
-      </div>
+        <div class="food-item">
+          <h3>For Sweets:</h3>
+          <h2>Sadaharu Aoki</h2>
+          <img src="media/sadaharu.jpg" alt="Image of pastry cake" />
+        </div>
 
-      <div class="food-item">
-        <h3>For Yakitori:</h3>
-        <h2>Hajimeya</h2>
-        <img src="media/hajimeya.jpg" alt="Hajimeya">
-      </div>
+        <div class="food-item">
+          <h3>For Yakitori:</h3>
+          <h2>Hajimeya</h2>
+          <img
+            src="media/hajimeya.jpg"
+            alt="Image of lots of Yakitori being cooked at an outdoor grill at night"
+          />
+        </div>
 
-      <div class="food-item">
-        <h3>For Tempura:</h3>
-        <h2>Tsunahachi</h2>
-        <img src="media/tempura.jpg" alt="Tsunhachi">
+        <div class="food-item">
+          <h3>For Tempura:</h3>
+          <h2>Tsunahachi</h2>
+          <img src="media/tempura.jpg" alt="Image of shrimp Tempura" />
+        </div>
       </div>
-    </div>
     </main>
 
     <footer>
-      <p> &copy; 2024 <a class="footer-link" href="https://laust.ca/">Leibrandt Austria. </a> For Educational Purposes</p>
-      </footer>
-    </body>
-  </html>
+      <p>
+        &copy; 2024
+        <a class="footer-link" href="https://laust.ca/">Leibrandt Austria. </a>
+        For Educational Purposes
+      </p>
+    </footer>
+  </body>
+</html>
