--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </head>
 
   <body>
+    <a href="#site-main" class="screen-reader-text">Skip to Content</a>
     <header>
       <nav>
         <a href="index.html" class="main-title">
@@ -69,7 +70,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="site-main">
       <div class="video-background">
         <video autoplay muted loop id="background-video">
           <source src="media/japanVideo.mp4" type="video/mp4" />
