--- a/credits.html
+++ b/credits.html
@@ -79,8 +79,8 @@
         <h2>Credits & References</h2>
         <table>
           <tr>
-            <th>Resource</th>
-            <th>Source Link</th>
+            <th><em>Resource</em></th>
+            <th><em>Source Link</em></th>
           </tr>
           <tr>
             <th>Shinjuku Information</th>
