--- a/food.html
+++ b/food.html
@@ -37,18 +37,18 @@
   </head>
 
   <body>
-    <a href="#site-main" class="screen-reader-text">Skip to Content</a>
+    <a href="#site-main" class="screen-reader-text" tabindex="0">Skip to Content</a>
     <header>
       <nav>
-        <a href="index.html" class="main-title"
+        <a href="index.html" class="main-title" tabindex="1"
           ><img src="media/logo.png" alt="Logo of Shinjuku City"
         /></a>
         <ul id="nav-buttons">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="attractions.html">Attractions</a></li>
-          <li><a href="food.html">Food</a></li>
-          <li><a href="credits.html">Credits</a></li>
+          <li><a href="index.html" tabindex="2">Home</a></li>
+          <li><a href="about.html" tabindex="3">About</a></li>
+          <li><a href="attractions.html" tabindex="4">Attractions</a></li>
+          <li><a href="food.html" tabindex="5">Food</a></li>
+          <li><a href="credits.html" tabindex="6">Credits</a></li>
         </ul>
 
         <button
@@ -78,7 +78,7 @@
           Your browser does not support the video tag.
         </video>
       </div>
-      <div class="quote">
+      <div class="quote" tabindex="7">
         <blockquote
           cite="https://explorepartsunknown.com/tokyo/bourdains-field-notes-tokyo/"
         >
@@ -91,37 +91,37 @@
       </div>
 
       <div class="food-content">
-        <div class="food-item">
+        <div class="food-item" tabindex="8">
           <h3>For Ramen:</h3>
           <h2>Fuunji</h2>
           <img src="media/fuunji.jpg" alt="Image of Ramen bowl" />
         </div>
 
-        <div class="food-item">
+        <div class="food-item" tabindex="9">
           <h3>For Tonkatsu:</h3>
           <h2>Katsukura</h2>
           <img src="media/katsukura.jpg" alt="Image of cooked Tempura" />
         </div>
 
-        <div class="food-item">
+        <div class="food-item" tabindex="10">
           <h3>For Udon:</h3>
           <h2>Mentsu-Dan</h2>
           <img src="media/mentsudan.jpg" alt="Image of Udon bowl" />
         </div>
 
-        <div class="food-item">
+        <div class="food-item" tabindex="11">
           <h3>For Sushi:</h3>
           <h2>Kyubey</h2>
           <img src="media/kyubey.jpg" alt="Image of assorted sushi" />
         </div>
 
-        <div class="food-item">
+        <div class="food-item" tabindex="12">
           <h3>For Sweets:</h3>
           <h2>Sadaharu Aoki</h2>
           <img src="media/sadaharu.jpg" alt="Image of pastry cake" />
         </div>
 
-        <div class="food-item">
+        <div class="food-item" tabindex="13">
           <h3>For Yakitori:</h3>
           <h2>Hajimeya</h2>
           <img
@@ -130,7 +130,7 @@
           />
         </div>
 
-        <div class="food-item">
+        <div class="food-item" tabindex="14">
           <h3>For Tempura:</h3>
           <h2>Tsunahachi</h2>
           <img src="media/tempura.jpg" alt="Image of shrimp Tempura" />
@@ -141,7 +141,7 @@
     <footer>
       <p>
         &copy; 2024
-        <a class="footer-link" href="https://laust.ca/">Leibrandt Austria. </a>
+        <a class="footer-link" href="https://laust.ca/" tabindex="15">Leibrandt Austria. </a>
         For Educational Purposes
       </p>
     </footer>
