removed 'skip to content' - bugs

--- a/about.html
+++ b/about.html
@@ -37,7 +37,6 @@
   </head>
 
   <body>
-    <a href="#site-main" class="screen-reader-text" tabindex="1">Skip to Content</a>
     <header>
       <nav>
         <a href="index.html" class="main-title" tabindex="2"
@@ -110,10 +109,10 @@
         />
         <div class="geography" tabindex="14">
           <h2>Geography</h2>
-          <p>
+          <p class="gyoen">
             Shinjuku is surrounded by Chiyoda to the east; Bunkyo and Toshima to
             the north; Nakano to the west, and Shibuya and Minato to the south.
-            Shinjuku Gyo-en National Garden and NTT DoCoMo Yoyogi Building The
+            <a href="attractions.html" tabindex="15">Shinjuku Gyo-en National Garden</a> and NTT DoCoMo Yoyogi Building The
             current city of Shinjuku grew out of several separate towns and
             villages, which have retained some distinctions despite growing
             together as part of the Tokyo metropolis.
@@ -123,9 +122,9 @@
           id="shinTransport"
           src="media/shinjuku-transport.jpg"
           alt="Image of a red train at a station"
-          tabindex="15"
+          tabindex="16"
         />
-        <div class="transport" tabindex="16">
+        <div class="transport" tabindex="17">
           <h2>Transportation</h2>
           <p>
             Shinjuku is a major urban transit hub. Shinjuku Station sees an
@@ -138,10 +137,10 @@
       </div>
     </main>
 
-    <footer tabindex="17">
+    <footer tabindex="18">
       <p>
         &copy; 2024
-        <a class="footer-link" href="https://laust.ca/" tabindex="18">Leibrandt Austria. </a>
+        <a class="footer-link" href="https://laust.ca/" tabindex="19">Leibrandt Austria. </a>
         For Educational Purposes
       </p>
     </footer>
