--- a/food.html
+++ b/food.html
@@ -37,7 +37,6 @@
   </head>
 
   <body>
-    <a href="#site-main" class="screen-reader-text" tabindex="0">Skip to Content</a>
     <header>
       <nav>
         <a href="index.html" class="main-title" tabindex="1"
@@ -95,30 +94,35 @@
           <h3>For Ramen:</h3>
           <h2>Fuunji</h2>
           <img src="media/fuunji.jpg" alt="Image of Ramen bowl" />
+          <div class="overlay"> <div class="overlay-text">mmm ramen... 🍲</div> </div>
         </div>
 
         <div class="food-item" tabindex="9">
           <h3>For Tonkatsu:</h3>
           <h2>Katsukura</h2>
           <img src="media/katsukura.jpg" alt="Image of cooked Tempura" />
+          <div class="overlay"> <div class="overlay-text">curry tonkatsu! 🍛</div> </div>
         </div>
 
         <div class="food-item" tabindex="10">
           <h3>For Udon:</h3>
           <h2>Mentsu-Dan</h2>
           <img src="media/mentsudan.jpg" alt="Image of Udon bowl" />
+          <div class="overlay"> <div class="overlay-text">fatter ramen noodles 🍜</div> </div>
         </div>
 
         <div class="food-item" tabindex="11">
           <h3>For Sushi:</h3>
           <h2>Kyubey</h2>
           <img src="media/kyubey.jpg" alt="Image of assorted sushi" />
+          <div class="overlay"> <div class="overlay-text">don't expect cali rolls here 🍣</div> </div>
         </div>
 
         <div class="food-item" tabindex="12">
           <h3>For Sweets:</h3>
           <h2>Sadaharu Aoki</h2>
           <img src="media/sadaharu.jpg" alt="Image of pastry cake" />
+          <div class="overlay"> <div class="overlay-text">cake cake cake! 🍥</div> </div>
         </div>
 
         <div class="food-item" tabindex="13">
@@ -128,12 +132,14 @@
             src="media/hajimeya.jpg"
             alt="Image of lots of Yakitori being cooked at an outdoor grill at night"
           />
+          <div class="overlay"> <div class="overlay-text">bbq on steroids! 🍖</div> </div>
         </div>
 
         <div class="food-item" tabindex="14">
           <h3>For Tempura:</h3>
           <h2>Tsunahachi</h2>
           <img src="media/tempura.jpg" alt="Image of shrimp Tempura" />
+          <div class="overlay"> <div class="overlay-text">fried shrimp! 🍤</div> </div>
         </div>
       </div>
     </main>
